--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ maven-build:
   stage: build
   script: "mvn package"
   artifacts:
+    expose_as: 'JUnit Reports'
     paths:
       - target/surefire-reports/TEST-*.xml
     reports:
